# playground

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.ninja  cmake_install.cmake  index.html  index.js  index.wasm  playground.wasm  shell.html
.github/workflows/: deploy.yml
src/: App.cpp  App.h  SimulationInterface.h  SimulationManager.cpp  SimulationManager.h  main.cpp
src/simulations/: GameOfLifeSimulation.cpp  GameOfLifeSimulation.h  ShaderTestSimulation.cpp  ShaderTestSimulation.h
